add javascript to the wheel

--- a/game.html
+++ b/game.html
@@ -37,40 +37,27 @@
                 <h1><img class="daisy1" src="assets/images/daisy.png" alt="An image of a daisy."> Have fun with a game! <img class="daisy2"
                         src="assets/images/daisy.png" alt="An image of a daisy."></h1>
                 <p>
-                    Here, we have created a very simple game for you to play. Spin the wheel and see what type of activity nature has for you today. 
-                    You HAVE to do what the wheel tells you to do TODAY. Otherwise, bad things will happen...
+                    We have created a very simple game for you to play. Spin the wheel and see what type of activity
+                    nature has in store for you today. Here is how to play: 
+                
+                    You HAVE to do what the wheel tells you to do TODAY. Otherwise, bad things will happen... The same goes with
+                    cheating. This is what the numbers on the wheel is representing:<br><br>
+                    1. Take a powerwalk to a park!<br>
+                    2. Run a mile in the nearest forest!<br>
+                    3. DO EVERYTHING!<br>
+                    4. Go for a bike-ride whereever you prefer!<br>
+                    5. DO EVERYTHING!<br>
+                    6. Go for a swim in the nearest lake.<br>
+                    7. DO EVERYTHING!<br>
+                    8. Go hiking an hour!<br><br>
+                    
+                    Good luck!<br>
+
+                    Click <a href="../wheel.html" aria-label="A clickable link to another page">here</a> to play!
                 </p>
                 <img id="women" src="assets/images/women.jpg" alt="An image of three women walking in nature.">
             </div>
         </article>
-
-        <!--This is the spinning wheel game that I created using CodeWithRandom-->
-         <button id="spin">Spin</button>
-    <span class="pin"></span>
-<div class="wheel">
-    <div class="one">1</div>
-    <div class="two">2</div>
-    <div class="three">3</div>
-    <div class="four">4</div>
-    <div class="five">5</div>
-    <div class="six">6</div>
-    <div class="seven">7</div>
-    <div class="eight">8</div>
-</div>
-<div class="activities">
-<p> 
- <ol>
-    1 = Take a powerwalk to a park!
-    2 = Run a mile in the nearest forest!
-    3 = DO IT ALL!
-    4 = Go for a bike-ride whereever you prefer!
-    5 = DO IT ALL!
-    6 = Go for a swim in the nearest lake.
-    7 = DO IT ALL!
-    8= Go hiking an hour!
- </p>   
-</h3>
-</div>
 
         <div id="question">
           <h2>Are you hooked on nature yet?</h2>
