add readme changes and javascript changes

--- a/game.html
+++ b/game.html
@@ -34,13 +34,15 @@
     <main>
         <article>
             <div class="intro">
-                <h1><img class="daisy1" src="assets/images/daisy.png" alt="An image of a daisy."> Have fun with a game! <img class="daisy2"
-                        src="assets/images/daisy.png" alt="An image of a daisy."></h1>
+                <h1><img class="daisy1" src="assets/images/daisy.png" alt="An image of a daisy."> Have fun with a game!
+                    <img class="daisy2" src="assets/images/daisy.png" alt="An image of a daisy.">
+                </h1>
                 <p>
                     We have created a very simple game for you to play. Spin the wheel and see what type of activity
-                    nature has in store for you today. Here is how to play: 
-                
-                    You HAVE to do what the wheel tells you to do TODAY. Otherwise, bad things will happen... The same goes with
+                    nature has in store for you today. Here is how to play:
+
+                    You HAVE to do what the wheel tells you to do TODAY. Otherwise, bad things will happen... The same
+                    goes with
                     cheating. This is what the numbers on the wheel is representing:<br><br>
                     1. Take a powerwalk to a park!<br>
                     2. Run a mile in the nearest forest!<br>
@@ -50,7 +52,7 @@
                     6. Go for a swim in the nearest lake.<br>
                     7. DO EVERYTHING!<br>
                     8. Go hiking an hour!<br><br>
-                    
+
                     Good luck!<br>
 
                     Click <a href="../wheel.html" aria-label="A clickable link to another page">here</a> to play!
@@ -59,25 +61,11 @@
             </div>
         </article>
 
-        <div id="question">
-          <h2>Are you hooked on nature yet?</h2>
+        <footer class="foot">
+            <p>Copyright 2023</p>
+        </footer>
 
-                <!--To create this form, I used a tutorial on Youtube. Read more in README.-->
-
-          <form action="question-answer-yes.html" method="GET" onsubmit="return is_checked()">
-             <p>Yes</p> <input type="radio" aria-label="A checkbox for the answer yes." name="check" value="yes" id="yes">
-             <p>No</p> <input type="radio" aria-label="A checkbox for the answer no." name="check" value="no" id="no">
-             <br>
-            <input id="submit" aria-label="A clickable submit button." type="submit" value="Submit">
-          </form>
-        </div> 
-    </main>
-
-    <footer class="foot">
-        <p>Copyright 2023</p>
-    </footer>
-
-    <script src="assets/js/script.js"></script>
+        <script src="assets/js/script.js"></script>
 </body>
 
 </html>
