add small changes to link

--- a/game.html
+++ b/game.html
@@ -55,7 +55,7 @@
 
                     Good luck!<br>
 
-                    Click <a href="../wheel.html" aria-label="A clickable link to another page">here</a> to play!
+                    Click <a href="wheel.html" aria-label="A clickable link to another page">here</a> to play!
                 </p>
                 <img id="women" src="assets/images/women.jpg" alt="An image of three women walking in nature.">
             </div>
